* Fix error with build_apps not working with certain versions of Python
* Fix DirectEntry/PGEntry flickering in the multithreaded pipeline (#1070)
* Fix sounds resuming on reactivation if stop() was called while inactive (#559)
* Collision traverser now releases GIL during traversal (#1033)
* Fix crash caused by some gamepad drivers on Linux (#1066)
* Skinning-enabled shaders can now properly render unskinned models as well
* BitMask, SparseArray, BitArray types can now be pickled (#886)
* VFSImporter now properly detects source file encodings in Python 3
* Workaround for lighting bug with scenes imported using panda3d-gltf/blend2bam
* Fix compilation error with Bullet 2.90+
* Assimp library was updated in Windows thirdparty packages (#1020)
* libCg is now shipped as library instead of framework on macOS (#1079)
* Fix some erroneous warnings about missing modules in build_apps
* Add warnings to build_apps when forgetting dependencies in requirements.txt
* Add experimental TextureStage::M_emission mode
* Add experimental p3d_TextureNormal, p3d_TextureEmission, etc. GLSL inputs
* Fix ability to use deployment system when compiling without OpenSSL (#1073)
* Fix assorted issues with rgbPanel
* Fix comparison operator of RenderEffects object

------------------------  RELEASE 1.10.7  -----------------------

This is primarily a bugfix release, but includes a few new features as well.

Rendering
* Add High Dynamic Range filter with ACES tone mapping to CommonFilters
* Add sRGB filter to CommonFilters (to be used as fallback to framebuffer-srgb)
* Fix (shadow) buffer no longer working after host buffer is destroyed (#890)
* Fix rare bug with shader parameters not being set right across render passes
* Fog density passed to shader now defaults to 0 when no fog is applied
* Don't check sampler/light type mismatch for non-shadow-casting lights (#942)
* Shader generator now makes use of Material alpha values if present (#912)